# cookiecutter-package

./: README.md  cookiecutter.json
devops/: cookiecutter.json
devops/hooks/: post_gen_project.py  pre_gen_project.py
devops/{{cookiecutter.package_name}}/: .gitignore  README.md  azure-pipeline.yml  pyproject.toml
devops/{{cookiecutter.package_name}}/docs/: make_package_docs.py
devops/{{cookiecutter.package_name}}/src/{{cookiecutter.__package_path}}/: cli.py
devops/{{cookiecutter.package_name}}/src/{{cookiecutter.__package_path}}/package_data/: __init__.py  sample.txt
github/: cookiecutter.json
github/hooks/: post_gen_project.py  pre_gen_project.py
github/{{cookiecutter.package_name}}/: .pre-commit-config.yaml  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt
github/{{cookiecutter.package_name}}/.github/workflows/: ci-pipeline.yaml
github/{{cookiecutter.package_name}}/docs/: about.md
github/{{cookiecutter.package_name}}/src/{{cookiecutter.__package_path}}/: read_data.py
